--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A repository containing the basics of algorithms and data structures",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,12 @@
   },
   "homepage": "https://github.com/AndreySkripachev/algorithms-and-data-structures#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
