Add linked list and tests file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "module": "ESNext",
     "target": "ESNext",
     "jsx": "react",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "alwaysStrict": true,
   }
 }
